--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: nose --with-coverage --cover-package app
+script: python -m nose --with-coverage --cover-package app
 after-success:
   coveralls
