--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: python -m nose --with-coverage --cover-package app
-after-success:
-  coveralls
+after-success: coveralls
