[chore] debug coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: python -m nose --with-coverage --cover-package app
+script:
+ - python -m nose --with-coverage --cover-package app
+ - coveralls debug
 after-success: coveralls
