--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
  - "pip install coveralls"
 # command to run tests
 script:
- - python -m nose --with-coverage --cover-package app
+ - py.test --cov=app
 after-success: coveralls
