--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
  - "pip install python-coveralls"
 # command to run tests
 script:
- - python -m nose --with-coverage --cover-package app
+ - python -m nose --with-coverage --cover-package=app
 after-success: coveralls
