[feature] modify .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ install:
 # command to run tests
 script:
  - python -m nose --with-coverage --cover-package=app
+ - coveralls
 after-success: coveralls
